ROS2_FreshmanProject/log/build_2023-05-29_06-00-40/ROS2_FreshmanProject/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/root/2ROS2workspace/ROS2_FreshmanProject/install/ROS2_FreshmanProject/lib/python3.10/site-packages/ROS2_FreshmanProject/TFculculate.py", line 142
    self.tf_publisher.sendTransform(self.DH_to_TF('S3A','S3B',np.pi/2,,0,0,0))
                                                                      ^
SyntaxError: invalid syntax

